# bascal

./: .gitignore  CLAUDE.md  Cargo.toml  MANUAL.md  README.md  intro.md
.agents/: AGENTS.md
.github/workflows/: packages.yml
examples/: add.bcl  data_read.bcl  do_loops.bcl  file_write.bcl  full_name.bcl  grades.bcl  loops.bcl  repeated_function_result.bas  repeated_function_result.bcl  screen_io.bcl  select_case.bcl  sort_driver.bcl  swap_random.bcl
examples/arcade/: arcade.bcl  game.bas  game.bcl  menu.bas  menu.bcl
examples/remline/: README.md  remline.bcl
examples/remline/sample/: expected.bas
output/: .gitkeep  add.bas  full_name.bas  grades.bas  loops.bas  repeated_function_result.bas  sort_driver.bas
output/remline/: remline.bas
src/: ast.rs  codegen.rs  diagnostics.rs  lexer.rs  lib.rs  linker.rs  main.rs  parser.rs  resolver.rs
tests/: examples.rs
tutorial/: 01_hello.bas  01_hello.bcl  02_variables.bas  02_variables.bcl  03_arithmetic.bas  03_arithmetic.bcl  04_conditions.bas  04_conditions.bcl  05_loops.bas  05_loops.bcl  06_select_case.bas  06_select_case.bcl  07_functions.bas  07_functions.bcl  08_arrays.bas  08_arrays.bcl  09_data.bas  09_data.bcl  10_files.bas  10_files.bcl  11_screen.bas  11_screen.bcl  12_require.bas  12_require.bcl  14_procedures.bas  14_procedures.bcl  15_random_files.bas  15_random_files.bcl  sort_driver.bas  sort_driver.bcl
tutorial/13_suite/: shared.bcl  show.bas  show.bcl  start.bas  start.bcl
tutorial/lib/: stats.bcl
tutorial/remline/: remline.bas  remline.bcl
tutorial/remline/sample/: input.bas
(+18 files in other folders)
